web/style.css
body, html {
  font-family: 'Montserrat', sans-serif;
}
a:hover {
    text-decoration: underline;
}
a {
    text-decoration: none;
    color: #E03A4D;
}
.pure-img-responsive {
    max-width: 100%;
    height: auto;
}
.is-center {
    text-align: center;
}
.big-button {
    display: inline-block;
    margin-bottom: 1em;
    margin-top: 1em;
    font-size: 1.2em;
    text-decoration: none;
    background-color: #E03A4D;
    border: 3px solid white;
    color: white;
    border-radius: 10px;
    padding: 1em;
}
/**
 * Header
 */
.header {
  background-color: #E03A4D;
}

.home-menu {
    position: relative;
    display: flex;
    max-width: 960px;
    margin: 0 auto;
}
.home-menu .pure-menu-heading a {
    color: white;
    text-decoration: none;
    align-items: center;
    display: flex;
}
.home-menu .pure-menu-heading h1 {
    font-size: 1.5em;
}
.home-menu .pure-menu-list a {
    color: white;
    text-decoration: none;
}
.logo-wrapper {
    float: left;
    margin-top: 10px;
    height: 100px;
    width: 100px;
    overflow: hidden;
    position: relative;
    background-color: white;
    border-radius: 50%;
    margin-right: 10px;
}
.logo-wrapper img {
  position: absolute;
  left: 10px;
  left: 3px;
  top: 5px;
  width: 95px;
}
.home-menu .pure-menu-link:hover {
  background-color: white;
  color: #E03A4D;
}

.home-menu .pure-menu-link {
  background-color: transparent;
  border: 2px solid white;
  border-radius: 5px;
  margin-right: 6px;
}

@media screen and (max-width: 1023px) {
    .home-menu {
        flex-direction: column;
        align-items: center;
        padding-bottom: 1em;
    }
}
@media screen and (min-width: 1024px) {
    .home-menu {
        flex-direction: row;
        align-items: center;
        justify-content: space-between;
    }
}

/**
 * Home app picture
 */
.app-container {
    text-align:center;
    margin-top: 48px;
    position: relative;
    top: -200px;
    margin-bottom: -200px;
    z-index: 1;
}
.app-container img {
    position: relative;
    max-width: 1080px;
    margin: auto;
    width: 100%;
}

/**
 * Footer
 */
footer {
    position: static;
    bottom: 0;
    padding: 2em;
    color: white;
    background-color: #E03A4D;
    font-size: 0.9em;
}
footer.stick-bottom {
    display: none;
}
footer a.support-link {
    display: inline-block;
    margin-bottom: 1em;
    font-size: 1.2em;
    text-decoration: none;
    background-color: white;
    border: 3px solid white;
    color: #E03A4D;
    border-radius: 10px;
    padding: 1em;
}
footer a.support-link:hover {
    background-color: transparent;
    color: white;
}
footer a {
    color: white;
    text-decoration: underline;
}

/**
 * Content
 */
.content {
    padding: 2em 2em;
}
.content-head {
    color: #E03A4D;
    font-size: 2em;
}
.content-subhead {
    color: #E03A4D;
    font-weight: bold;
    font-size: 1.2em;
}

/**
 * Jumbotron
 */
.jumbotron {
    overflow: hidden;
    position: relative;
    color: white;
    background-color: #E03A4D;
    padding-bottom: 10em;
    text-align: center;
}
.jumbotron-inner {
  max-width: 960px;
  margin: 0 auto;
}
.jumbotron h1 {
    display: inline-block;
    border-radius: 2px;
    text-align: center;
    font-size: 3em;
    margin-top: 2em;
    margin-bottom: 0.5em;
}
.jumbotron a {
    color: white;
}
.jumbotron q {
    display: block;
    margin: 0 auto;
    text-align: center;
    font-size: 1.2em;
    line-height: 1.2em;
    box-sizing: content-box;
    padding: 1em;
}
.jumbotron .action:hover {
  color: #56B68B;
}
.jumbotron .action {
    display: inline-block;
    margin: 1em 0 2em;
    font-size: 2.5em;
    text-decoration: none;
    background-color: white;
    border: 3px solid white;
    color: #E03A4D;
    border-radius: 10px;
    padding: 18px;

}
@media screen and (max-width: 860px) {
    .jumbotron h1 {
        font-size: 2em;
        margin-top: 1em;
    }
    .jumbotron .action {
        font-size: 1.5em;
    }
}
/**
 * How
 */
.how-block {
    max-width: 960px;
    margin: 0 auto;
    position: relative;
    box-sizing: border-box;
}
.how-item {
    margin-top: 2em;
}
.how-item > * {
    margin: 1em;
}
.how-item a {
    color: #E03A4D;
    text-decoration: none;
}
.how-item p {
    line-height: 1.5em;
}

/**
 * Steps
 */
.step-feature.reverse {
    flex-direction: row-reverse;
}
.step-feature {
    box-sizing: border-box;
    display: flex;
    justify-content: space-between;
    align-items: center;
    padding: 24px 0;
}

.step-feature img {
    padding: 0;
    display: block;
    margin: auto;
    max-width: 440px;
    width: 100%;
    margin: 0 30px 0 30px;
}

.step-feature-text p a {
    color: #E03A4D;
}
.step-feature-text p {
    box-sizing: border-box;
    line-height: 1.5em;
}
.step-feature-text h3 {
    color: #E03A4D;
    font-size: 1.6em;
    box-sizing: border-box;
}
@media screen and (max-width: 860px) {
    .step-feature {
        display: block;
        align-items: center;
        text-align: center;
    }
    .step-feature p, .step-feature h3 {
        max-width: 456px;
        padding: 0 24px 20px;
        text-align: left;
        width: 100%;
        margin: 0 auto;
    }
    .step-feature img {
        margin: 0 auto;
    }
}
/**
 * Sample message
 */
.sample-message {
    padding: 3em;
    background-color: #E03A4D;
    color: white;
}
.sample-message-inner {
    max-width: 960px;
    margin: 0 auto;
    position: relative;
}
.sample-message h2,
.sample-message p {
    font-family: 'Montserrat', sans-serif;
    text-align: center;
    color: white;
}
.sample-message p {
    font-size: 1.2em;
}
.sample-message img {
    border-radius: 2px;
}

@media screen and (min-width: 1024px) {
    .sample-message {
        display: flex;
        align-items: center;
    }
    .sample-message img {
        margin-left: 1em;
    }
}

@media screen and (max-width: 1023px) {
    .sample-message img {
        margin-top: 1em;
    }
}

/**
 * Why
 */
.why-block {
    max-width: 960px;
    margin: 0 auto;
    position: relative;
}
/* ... */

